--- a/index.html
+++ b/index.html
@@ -1,1 +1,147 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Plush Perfection Carpets</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Roboto:wght@300;400&display=swap');
+        
+        body {
+            font-family: 'Roboto', sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            background-color: #f9f5f0;
+            color: #4a4a4a;
+        }
+        header {
+            background-color: #8b4513;
+            color: #f9f5f0;
+            text-align: center;
+            padding: 2rem;
+            background-image: url("data:image/svg+xml,%3Csvg width='60' height='60' viewBox='0 0 60 60' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%23ffffff' fill-opacity='0.1'%3E%3Cpath d='M36 34v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4zm0-30V0h-2v4h-4v2h4v4h2V6h4V4h-4zM6 34v-4H4v4H0v2h4v4h2v-4h4v-2H6zM6 4V0H4v4H0v2h4v4h2V6h4V4H6z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+        }
+        header h1 {
+            font-family: 'Playfair Display', serif;
+            font-size: 3rem;
+            margin: 0;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
+        }
+        nav {
+            background-color: #6b3305;
+            padding: 1rem;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
+        nav ul {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+        }
+        nav ul li {
+            margin: 0 15px;
+        }
+        nav ul li a {
+            color: #f9f5f0;
+            text-decoration: none;
+            font-weight: bold;
+            transition: color 0.3s ease;
+        }
+        nav ul li a:hover {
+            color: #ffd700;
+        }
+        .container {
+            width: 80%;
+            margin: auto;
+            overflow: hidden;
+            padding: 40px 20px;
+        }
+        .project {
+            background-color: #fff;
+            padding: 20px;
+            margin-bottom: 30px;
+            border-radius: 8px;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+            transition: transform 0.3s ease;
+        }
+        .project:hover {
+            transform: translateY(-5px);
+        }
+        .project h3 {
+            color: #8b4513;
+            font-family: 'Playfair Display', serif;
+        }
+        .carpet-pattern {
+            height: 20px;
+            background-image: url("data:image/svg+xml,%3Csvg width='40' height='40' viewBox='0 0 40 40' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%238b4513' fill-opacity='0.1' fill-rule='evenodd'%3E%3Cpath d='M0 40L40 0H20L0 20M40 40V20L20 40'/%3E%3C/g%3E%3C/svg%3E");
+        }
+        .btn {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #8b4513;
+            color: #fff;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+        .btn:hover {
+            background-color: #6b3305;
+        }
+        #contact {
+            background-color: #fff;
+            padding: 30px;
+            border-radius: 8px;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Plush Perfection Carpets</h1>
+        <p>Luxurious Flooring Solutions</p>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+    <div class="carpet-pattern"></div>
+    <div class="container">
+        <section id="home">
+            <h2>Welcome to Plush Perfection Carpets</h2>
+            <p>Experience the luxury of perfectly fitted carpets that transform your space into a haven of comfort and style.</p>
+            <a href="#contact" class="btn">Get a Quote</a>
+        </section>
+        <section id="about">
+            <h2>Our Expertise</h2>
+            <p>With years of experience and an eye for detail, we deliver exceptional carpet fitting services that elevate your home's aesthetic and comfort. Our team of skilled professionals ensures every installation is nothing short of perfection.</p>
+        </section>
+        <section id="projects">
+            <h2>Our Masterpieces</h2>
+            <div class="project">
+                <h3>Elegant Living Room Transformation</h3>
+                <p>A complete makeover featuring a plush, deep-pile carpet in warm beige tones, bringing cozy luxury to this family living space.</p>
+                <img src="/api/placeholder/400/300" alt="Elegant Living Room">
+            </div>
+            <div class="project">
+                <h3>Hotel Lobby Grandeur</h3>
+                <p>A large-scale commercial project where we installed a custom-designed, high-traffic carpet, combining durability with sophisticated patterns.</p>
+                <img src="/api/placeholder/400/300" alt="Hotel Lobby">
+            </div>
+        </section>
+        <section id="contact">
+            <h2>Get in Touch</h2>
+            <p>Ready to transform your space? Contact us for a free consultation and quote.</p>
+            <p>Address: [Your Address Here]</p>
+            <p>Phone: [Your Phone Number]</p>
+            <p>Email: [Your Email Address]</p>
+        </section>
+    </div>
+    <div class="carpet-pattern"></div>
+</body>
+</html>
